[project]
name = "face-shaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.39.0",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.17",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
