[project]
name = "face-shaper"
version = "0.1.0"
description = "AI-powered face shape analysis and hairstyle recommendation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.39.0",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.1.1", "ruff>=0.2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
